@@ -1,3 +1,5 @@
+* Ceil purchase request quantity
+
 Version 4.6.0 - 2017-10-30
 * Bug fixes (see mercurial logs for details)
 
